--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>SESION HTML 2</h1>
+    <nav>
+        <ul>
+            <li><a href="listas.html">Listas</a></li>
+            <li><a href="navegacion.html">Navegacion</a></li>
+            <li><a href="tablas.html">Tablas</a></li>
+            <li><a href="images.html">Imagenes</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
