--- a/images.html
+++ b/images.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Imágenes</h1>
+    <li><a href="listas.html">Listas</a></li>
+    <li><a href="navegacion.html">Navegacion</a></li>
+    <li><a href="tablas.html">Tablas</a></li>
+    <li><a href="images.html">Imagenes</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href=""></a></li>
     <img src="../assents/fibraOptica.jpg" alt="">
 </body>
 </html>
