--- a/listas.html
+++ b/listas.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Listas</h1>
+    <nav></nav>
+        <ul>
+            <li><a href="navegacion.html">Navegacion</a></li>
+            <li><a href="tablas.html">Tablas</a></li>
+            <li><a href="images.html">Imagenes</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
     <h2>Lista Ordenada</h2>
     <ol>
         <li>ENERO</li>
