--- a/navegacion.html
+++ b/navegacion.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Navegacion</h1>
+    <li><a href="listas.html">Listas</a></li>
+    <li><a href="tablas.html">Tablas</a></li>
+    <li><a href="images.html">Imagenes</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href=""></a></li>
     <nav>
         <ul>
             <ul><a href="#">Quienes Somos</a></ul>
