--- a/tablas.html
+++ b/tablas.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Tablas</h1>
+    <li><a href="listas.html">Listas</a></li>
+    <li><a href="navegacion.html">Navegacion</a></li>
+    <li><a href="images.html">Imagenes</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href=""></a></li>
     <h2>Estudiantes</h2>
     <table border="1">
         <tr>
