--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="navegacion.html">Navegacion</a></li>
             <li><a href="tablas.html">Tablas</a></li>
             <li><a href="images.html">Imagenes</a></li>
-            <li><a href=""></a></li>
+            <li><a href="videoAudio.html">Video y Audio</a></li>
             <li><a href=""></a></li>
         </ul>
     </nav>
