--- a/navegacion.html
+++ b/navegacion.html
@@ -10,6 +10,7 @@
     <li><a href="listas.html">Listas</a></li>
     <li><a href="tablas.html">Tablas</a></li>
     <li><a href="images.html">Imagenes</a></li>
+    <li><a href="videoAudio.html">Video y Audio</a></li>
     <li><a href="index.html">Index</a></li>
     <li><a href=""></a></li>
     <nav>
