--- a/tablas.html
+++ b/tablas.html
@@ -10,6 +10,7 @@
     <li><a href="listas.html">Listas</a></li>
     <li><a href="navegacion.html">Navegacion</a></li>
     <li><a href="images.html">Imagenes</a></li>
+    <li><a href="videoAudio.html">Video y Audio</a></li>
     <li><a href="index.html">Index</a></li>
     <li><a href=""></a></li>
     <h2>Estudiantes</h2>
